[metadata]
name = plottwist-py
version = 1.0.0
description = plottwist makes plots reproducible from their PDFs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ivan Markin
author_email = git@unkaktus.art
url = https://github.com/unkaktus/plottwist
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    msgpack